# DjangoProject1

./: .gitignore  README.md  banwords.py  data.json  data_blog.json  data_catal.json  data_catalog.json  data_product.json  group.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_views_material_views_count_and_more.py  0003_rename_material_blog_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_imagen.py  0002_product_manufactured_at.py  0003_subject.py  0004_alter_product_created_at_alter_product_updated_at_and_more.py  0005_alter_version_current_version.py  0006_version_token.py  0007_remove_version_token.py  0008_product_owner.py  0009_alter_product_options_product_is_published.py
catalog/templates/: base.html  base_product.html  product_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: tags_sp.py
config/: settings.py  urls.py
materials/: models.py  urls.py  views.py
materials/migrations/: 0002_rename_views_material_views_count_and_more.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: supus.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py
(+10 files in other folders)
