[tool.poetry]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = ["Maksim <maks.severgin80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
